apps/helpdesk/src/pages/aiAgent/components/KnowledgeEditor/KnowledgeEditorSidePanel/KnowledgeEditorSidePanelSectionRelatedTickets.less
@import (reference) '~css/typography';
@import '~css/new/mixins';

:local {
    .container {
        display: flex;
        flex-direction: column;
        gap: var(--spacing-sm);
    }

    .emptyContainer {
        display: flex;
        height: 66px;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        align-self: stretch;
        padding: var(--spacing-md);

        color: var(--content-neutral-secondary);
        text-align: center;

        .caption-regular();
    }

    .title {
        display: flex;
        align-items: center;
        gap: var(--spacing-xxs);
    }

    .titleTag {
        padding-left: var(--spacing-xs);
        padding-right: var(--spacing-xs);
    }

    .ticketsList {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        gap: var(--spacing-xs);
        align-self: stretch;
    }

    .ticketCard {
        display: flex;
        padding: 12px;
        flex-direction: column;
        justify-content: center;
        align-items: flex-start;
        gap: var(--spacing-xs);
        align-self: stretch;
        border-radius: 8px;
        border: 1px solid var(--border-neutral-default);
        background: var(--elevation-neutral-default);
    }

    .ticketCardHeader {
        display: flex;
        align-items: center;
        gap: 4px;
        align-self: stretch;
    }

    .ticketCardTitle {
        display: flex;
        align-items: center;
        gap: 4px;
        flex: 1 0 0;

        color: var(--content-neutral-default);

        .caption-semibold();
    }

    .ticketCardIcon {
        color: var(--content-neutral-tertiary);
    }

    .ticketCardLastUpdatedDatetime {
        color: var(--content-neutral-secondary);
        text-align: right;

        .caption-regular();
    }

    .ticketCardContent {
        display: flex;
        align-items: center;
        gap: var(--spacing-xs);
        color: var(--content-neutral-default);

        .caption-regular();
    }
}

